jss-compiler/tests/parser/valid/valid_multiple_declarations.jss
function void main() {
    let int a, b, c;
    let real x, y;
    a = 1;
    b = 2;
    c = 3;
    x = 1.0;
    y = 2.0;
}
