jss-compiler/tests/parser/invalid/invalid_postfix_increment.jss
function void main() {
    let int x = 0;
    x++;
}
